2000-01-27  Ken Raeburn  <raeburn@raeburn.org>

	* init_sec_context.c (krb5_gss_init_sec_context): Default to
	des-cbc-crc.

1999-10-26  Ken Raeburn  <raeburn@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context): Get rid of
	unused variables 'err' and 'enctype'.

	* k5seal.c (make_integ_token_v2): Set 'code' when malloc fails.

1999-10-26  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup. [from wsanchez@apple.com]

Wed May 19 13:21:55 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Improve rule to create gssapi include dir under
		windows.

Wed May 19 11:40:52 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Add windows build rules for putting header files in
		include dir.

Mon May 10 15:22:27 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

Fri Apr 30 12:27:14 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* set_ccache.c (gss_krb5_ccache_name): Add call to free the
		default credential changing the ccache name.

Thu Apr 29 18:02:00 1999  Miro Jurisic  <meeroh@mit.edu>

	* gssapi_krb5.h: Remove gssapi_generic.h includes because
		this header file is public interface and gssapi_generic.h
		isn't and shouldn't be included by clients.

Fri Apr 23 00:31:17 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* wrap_size_limit.c (krb5_gss_wrap_size_limit): Fix wrap_size
		limit so that it correctly calculates its results, and
		underestimates the correct size instead of overestimating
		it, and not returning zero all the time.  (Which it used
		to do after the March 25 fix.)

Sat Apr 17 01:23:57 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* gssapi_krb5.h, copy_ccache.c, get_tkt_flags.c, set_ccache.c:
 		Make the krb5 extension functions exportable in a Windows
 		DLL.

Fri Mar 26 22:17:20 1999  Theodore Y. Ts'o  <tytso@mit.edu>
